# SiNE

./: .gitignore  .mcp.json.example  2026-01-19_IMPLEMENTATION_NOTE_ACLR_V1.md  AGENT_ADDED.md  CHANNEL_CODE_REVIEW.md  CLAUDE.md  CSMA_VS_TDMA_CONFIGS.md  LICENSE  PHASE_1.5_1.6_INTEGRATION_COMPLETE.md  PLAN.md  PLAN_SHAREDMEDIUM.md  PLAN_SINR.md  README.md  configure.sh  pyproject.toml  test_deploy_debug.sh
.claude/: CLAUDE.md
.claude/agents/: linux-networking-specialist.md  wireless-comms-engineer.md
CLAUDE_RESOURCES/: EXAMPLES_REVIEW.md  Installation - containerlab.html  Introduction to Sionna RT — Sionna 1.2.1 documentation.html  LESSONS_LEARNT.md  Open-source network simulation roundup 2024 - Open-Source Routing and Network Simulation.html  Part 1_ Getting Started with Sionna — Sionna 1.2.1 documentation.html  RX_SENSITIVITY_ANALYSIS.md  SIONNA_SYNTHETIC_ARRAY_FIX.md  TCP_INFO.md  Topology definition - containerlab.html  Tutorial on Diffraction — Sionna 1.2.1 documentation.html
CLAUDE_RESOURCES/mitsuba_example_scene/: scene.xml
dev_resources/: CHATGPT_typical_values_spectral_efficiency.md  INVESTIGATION_antenna-gain.md  INVESTIGATION_path_loss_discrepancy.md  PHASE_SPECTRAL_EFF_SHARED_BRIDGE_COMPLETE.md  PLAN_2026-01-31_tests-refactor.md  PLAN_ACLRv2.md  PLAN_MCS_WITH_SINR.md  PLAN_bidirectional_p2p_netem.md  PLAN_calc_spectral_efficiency.md  PLAN_fallback-engine-exposure.md  PLAN_improve_BER-PER_computation.md  PLAN_mimo_features.md  PLAN_nf_config.md  PLAN_rt_and_netem.md  PLAN_testscoverage.md  PROMPT_2026-01-31_refactor_tests.md
dev_resources/CLAUDE_RESOURCES/: Installation-containerlab.md  LESSONS_LEARNT.md  Open-source-network-simulation-roundup-2024.md  Topology-definition-containerlab.md  containerlab_bridge_docs.md
dev_resources/new_wireless_yaml_format/: chatgpt_jitter_thinking.md  sample.yaml
docker/channel-server/: Dockerfile
docker/node/: Dockerfile
examples/: demo_interference_engine.py
examples/adaptive_mcs_wifi6/: network.yaml
examples/common_data/: wifi6_mcs.csv
images/: two_rooms_live.webm
scenes/: README.md  two_room_default.xml  two_room_default_old.xmltwo_room_default_obsolete.xml  two_room_large.xml  two_rooms.xml  vacuum.xml  viewer.ipynb  viewer_live.ipynb  viewer_live_josh.ipynb
tests/: README.md  __init__.py  benchmark_interference.py  conftest.py  test_interference_engine.py  test_sinr_mac_integration.py  test_tdma_model.py
utilities/: calc_spectralefficiency.py
(+206 files in other folders)
